# hi

./: INSTALL  Makefile.in  README  configure  configure.in
include/: hi_def.h  hi_ebcdic.h  hi_func.h  hi_getopt.h  hi_keymap.h  hi_macro.h  hi_std.h  hi_str.h
org_doc/: MANUAL.C  MANUAL.EUC  MANUAL.SJIS  ReadMe.C  ReadMe.EUC  ReadMe.SJIS  Release.C  Release.EUC  Release.SJIS
sample/: _hirc
src/: Makefile.in  address_get.c  address_view.c  area_check.c  area_delete.c  area_write.c  binary_edit.c  cur_move_c_h.c  cur_move_c_j.c  cur_move_c_k.c  cur_move_c_l.c  cur_move_h_h.c  cur_move_h_j.c  cur_move_h_k.c  cur_move_h_l.c  cur_pos_move.c  cur_pos_set.c  data_view.c  debug.c  dmy.c  edit_c_add.c  edit_c_del.c  edit_c_input.c  edit_c_rep_1.c  edit_c_rep_2.c  edit_h_add.c  edit_h_del.c  edit_h_input.c  edit_h_rep_1.c  edit_h_rep_2.c  env_output.c  err_msg.c  exec_get_cmd.c  exec_search_cmd.c  exec_shell.c  file_create.c  file_insert.c  file_read.c  file_write.c  get_cmd.c  (+53 more)
